manifests/deployment-2.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "ksec3"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "ksec3"
    spec:
      containers:
        - name: "ksec3"
          image: "dzbuild.azurecr.io/ksec3"
          ports:
          - containerPort: 80
