manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "ksec3"
    labels:
        app: "ksec3"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: "ksec3"
