manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "policy15-03d9"
    labels:
        app: "policy15-03d9"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "policy15-03d9"
